[tool.poetry]
name = "notion-tqdm"
version = "0.1.0"
description = ""
authors = ["fake_name <fake@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
tqdm = "^4.67.1"
tzlocal = "^5.2"
pytz = "^2024.2"
requests = "^2.32.3"
notion = {git = "https://github.com/jamalex/notion-py"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
